Changelog
=========

0.7
---

- Fixed InvoiceReport.sumInvoices to gracefully deal with floating point
  numbers, like 0.0.
  [hannosch]

- Added TinyMCE as a dependency and install it by default.
  [hannosch]

- Sort the entries in the fast timesheet by project title instead of relying
  on an undefined dict ordering.
  [hannosch]

- Increased the font-size in the fast timesheet table.
  [hannosch, witsch]

- Removed the weekly summary from the tabs, we don't use it anymore.
  [hannosch]

- Added an isAnonymous check to the fast timesheet. If you are not logged in
  and go to the timesheet_fast, you are prompted for login now.
  [hannosch]

- Welcome to the Jungle - add more monkeys.
  [hannosch]

- Moved out the invoice_hours template to the Invoice package.
  [hannosch]

- We don't need the taskAddedSubscriber anymore.
  [hannosch]

- Removed split task functionality.
  [hannosch]

- Removed the handling of "remaining" time.
  [hannosch]

- Removed batch creation views for no longer used types.
  [hannosch]

- Removed the weekly planning views. We don't use Extropy to do detailed task
  planning anymore.
  [hannosch]

- Figure out how to do the real catalog index and metadata setup for our own
  tools without using custom GS handlers.
  [hannosch]

- Completely removed estimate handling.
  [hannosch]

- Removed the `claimTask` functionality.
  [hannosch]

- Really disable all of linkintegrity by overriding the event handlers.
  [hannosch]

- Added caching packages and config.
  [hannosch]

- Make sure to add the `start` index to our time tracker tool / catalog.
  [hannosch]

- Removed old test runner scripts.
  [hannosch]

- Use GS profile dependency mechanism to install the Invoice and Memo packages.
  Remove the custom setup handler.
  [hannosch]

- Removed specialized login_next script, which didn't serve any purpose
  anymore and was causing errors on @@logindestination.
  [hannosch]

- Initial implementation.
  [jarn]
